# Covid-19-Dashboard-Project

./: .dockerignore  DockerFile  Dockerfile  FORMATTER.md  LICENSE.txt  README.md  Roadmap.md  changes.md  exampleusage  exampleusage.md  main.py  maincode.py  nihatomerkaracailbarsefekorkmaz.py  pyproject.toml  requirements.txt  streamlitApp.py  test_covid_functions.py  testing.md
Old/: maincodeOLD.py
database/: WHO-COVID-19-global-hosp-icu-data.csv  WHO-COVID-19-global-monthly-death-by-age-data.csv  WHO-COVID-19-global-table-data.csv
mainStreamlitAPP/: main.py
src/: countryOrRegionWrapper.py  deathRate.py  githubdataimporter.py  helperFunctions.py  importData.py  rtStatistics.py  streamlitApp.py  test.py
src/statistics/: __init__.py  averageDailyCases.py  averageDailyDeaths.py  averageHospitalization.py  countryOrRegionWrapper.py  deathRate.py  helperfunctions.py  rtStatistics.py  testAverageDailyCases.py  testCountryOrRegionWrapper.py  testRtAndDeathRate.py
src/statistiques/: __init__.py  averageDailyCases.py  averageDailyDeaths.py  averageHospitalizations.py  countryOrRegionWrapper.py  deathByAgeIncome.py  deathRate.py  layout.py  plots.py  rtStatistics.py  testAverageDailyCases.py  testRtAndDeathRate.py  vaccinationStats.py
src/tests/: testRtAndDeathRate.py
tests/: test_covid_functions.py  testing.md
