[project]
name = "covid19-dashboard-project"
version = "0.1.0"
description = ""
authors = [
    {name = "omerkaraca-fire",email = "omer.karaca@sabanciuniv.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
